RESOLVED FIXED294117
2D context state flag for inverse transform is not maintained correctly
https://bugs.webkit.org/show_bug.cgi?id=294117
Summary 2D context state flag for inverse transform is not maintained correctly
Kimmo Kinnunen
Reported 2025-06-06 06:10:00 PDT
2D context state flag for inverse transform is not maintained correctly
Attachments
Kimmo Kinnunen
Comment 1 2025-06-06 06:15:10 PDT
293589@main caused an additional regression
Kimmo Kinnunen
Comment 2 2025-06-06 06:15:27 PDT
Kimmo Kinnunen
Comment 3 2025-06-06 06:29:32 PDT
Kimmo Kinnunen
Comment 4 2025-06-06 06:44:47 PDT
Ahmad Saleem
Comment 5 2025-06-06 09:52:34 PDT
*** Bug 294116 has been marked as a duplicate of this bug. ***
EWS
Comment 6 2025-06-18 07:06:53 PDT
Committed 296373@main (e0c0c143f85c): <https://commits.webkit.org/296373@main> Reviewed commits have been landed. Closing PR #46420 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.